infrastructure/k8s-manifests/blue-green/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blue-green-application
  labels:
    app: rollout-patterns
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: blue-green-rollout
  template:
    metadata:
      labels:
        app: blue-green-rollout
    spec:
      containers:
        - name: core
          image: "oluwatunmiseolat/rollout-patterns:v4"
          imagePullPolicy: Always
          ports:
            - containerPort: 3401
          livenessProbe:
            httpGet:
              path: /health
              port: 3401
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
  strategy:
    blueGreen:
      activeService: blue-green-rollout-active-svc
      previewService: blue-green-rollout-preview-svc
      autoPromotionEnabled: false
      prePromotionAnalysis:
        templates:
          - templateName: success-rate
      # previewReplicaCount: 1
      # scaleDownDelaySeconds: 300
