infrastructure/k8s-manifests/blue-green/active-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: blue-green-rollout-active-svc
spec:
  selector:
    app: blue-green-rollout
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3401
