infrastructure/k8s-manifests/blue-green/preview-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: blue-green-rollout-preview-svc
spec:
  type: NodePort
  selector:
    app: blue-green-rollout
  ports:
    - protocol: TCP
      port: 33001
      targetPort: 3401
